# Link-GPT

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: main.yml
link-gpt/: Cargo.toml
link-gpt-app/: Cargo.toml
link-gpt-app/src/: main.rs
link-gpt-java/: build.gradle  settings.gradle
link-gpt-java/src/main/java/eu/iashchak/linkgpt/: Dialog.java  Message.java  TextGeneration.java
link-gpt-java/src/test/java/eu/iashchak/linkgpttests/: DialogTest.java  MessageTest.java
link-gpt-jni/: Cargo.toml
link-gpt-jni/src/: lib.rs
link-gpt-jni/src/eu/iashchak/linkgpt/: Dialog.java  HelloWorld.java  Message.java  TextGeneration.java  eu_iashchak_linkgpt_Dialog.h  eu_iashchak_linkgpt_HelloWorld.h  eu_iashchak_linkgpt_Message.h  eu_iashchak_linkgpt_TextGeneration.h
link-gpt/src/: dialog.rs  lib.rs  message.rs  text_generation.rs  tokenizer_output_stream.rs
link_gpt/: Cargo.toml
link_gpt/src/: dialog.rs  lib.rs  message.rs  text_generation.rs  tokenizer_output_stream.rs
link_gpt_app/: Cargo.toml
link_gpt_app/src/: main.rs
link_gpt_java/: build.gradle  gradlew  settings.gradle
link_gpt_java/gradle/wrapper/: gradle-wrapper.properties
link_gpt_java/src/main/java/cz/adamh/utils/: NativeUtils.java
link_gpt_java/src/main/java/eu/iashchak/crossutils/: PlatformDetector.java  Triplet.java
link_gpt_java/src/main/java/eu/iashchak/linkgpt/: Dialog.java  Message.java  TextGeneration.java
link_gpt_java/src/test/java/cz/adamh/utils/: NativeUtilsTest.java
link_gpt_jni/: Cargo.toml
link_gpt_jni/src/: lib.rs
(+9 files in other folders)
