[package]
name = "link-gpt"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-transformers = { git = "https://github.com/iashchak/candle.git" }
candle-nn = { git = "https://github.com/iashchak/candle.git" }
tokenizers = "0.13.4"
hf-hub = "0.3.2"
anyhow = "1.0.75"
candle-core = { git = "https://github.com/iashchak/candle.git" }
indicatif = "0.17.7"

