[package]
name = "link_gpt"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-transformers = { git = "https://github.com/iashchak/candle.git", version = "0.3.1" }
candle-nn = { git = "https://github.com/iashchak/candle.git", version = "0.3.1" }
tokenizers = "0.15.0"
hf-hub = "0.3.2"
anyhow = "1.0.75"
candle-core = { git = "https://github.com/iashchak/candle.git", version = "0.3.1" }
indicatif = "0.17.8"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
